Refactoring of DocumentMarkupModelScanner, reset and rescan on settings change